<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.nexus</groupId>
  <artifactId>nexus</artifactId>
  <version>0.1-ALPHA-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <revision>0.1-ALPHA-SNAPSHOT</revision>
    <project.version>${revision}</project.version>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <maven.compiler.proc>full</maven.compiler.proc>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <modules>
    <module>nexus-bom</module>
    <module>nexus-commons</module>
    <module>nexus-annotations</module>
    <module>nexus-core</module>
    <module>nexus-security-jwt</module>
    <module>nexus-database</module>
    <module>nexus-starter</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.12.1</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>

        <plugin>
          <groupId>org.graalvm.buildtools</groupId>
          <artifactId>native-maven-plugin</artifactId>
          <version>0.11.2</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>